# FogBugzPy

./: .gitignore  .hgignore  .hgtags  .travis.yml  BUILD_README.TXT  CHANGES.rst  LICENSE  MANIFEST  PYPI_README.TXT  README.rst  README.txt  buildWindows.ps1  fbshell.py  fogbugz.py  getch.py  setup.cfg  setup.py  setupWindowsBuild.py
.github/workflows/: main.yml
