[metadata]
license_file = LICENSE
name = fogbugz_bis
author = Fog Creek Software
author_email = customer-service@fogcreek.com
maintainer = YouGov, Plc.
maintainer_email = open-source@yougov.com
description = Python library for interacting with the FogBugz API
long_description = file:README.rst
url = https://github.com/yougov/FogBugzPy
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Natural Language :: English
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX
	Operating System :: POSIX :: BSD
	Operating System :: POSIX :: Linux
	Topic :: Internet :: WWW/HTTP
	Topic :: Software Development
	Topic :: Software Development :: Bug Tracking
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Software Development :: Version Control
	Topic :: Utilities

[options]
packages = find:
include_package_data = true
py_modules = fogbugz
python_requires = >=3.6
install_requires =
	BeautifulSoup4
	lxml
	six
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"
	# jaraco/skeleton#22
	jaraco.test >= 3.2.0

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
